navbar letter spacing fix

--- a/style.css
+++ b/style.css
@@ -18,3 +18,6 @@ body {
 .services > div a:hover {
   opacity: 0.5;
 }
+.navbar-brand{
+  letter-spacing: 5px;
+}
